# AnActar

./: actar.sh
ACTARLib/: CMakeLists.txt
ACTARLib/core/: CMakeLists.txt  MDetectorConfig.cc  MDetectorConfig.h  MEventReduced.h
ACTARLib/reco/: ACTARRecoLinkDef.h  CMakeLists.txt  MHough.cc  MHough.h  MSimpleRansac.cc  MSimpleRansac.h  MTrack.cc  MTrack.h
ACTARLib/ressources/CMake/: ACTARAnalysis.cmake  ACTARLibConfig.cmake.in  ACTAR_CMake_Preamble.cmake
ACTARLib/scripts/: build_dict.sh
ACTARLib/utils/: CMakeLists.txt  Parameters.h  Utils.cc  Utils.h
ACTARProject/NSI-37/: Analysis.cxx  Analysis.h  CMakeLists.txt  RunToTreat.txt
ACTARProject/NSI-37/EnergyLossTable/: Eloss_C_in_He-iC4H10.txt  Eloss_He_in_He-iC4H10.txt
ACTARProject/NSI-37/config/: actar_config.txt
ACTARProject/e750/: Analysis.cxx  Analysis.h  RunToTreat.txt
ACTARProject/e750/calib/: calib_total_bl_corr.txt
ACTARProject/e750/config/: actar_config.txt
